--- a/Why42IsAGoodMinimumSampleSize.ipynb
+++ b/Why42IsAGoodMinimumSampleSize.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d84e55e",
+   "id": "b3686af6",
    "metadata": {},
    "source": [
     "# Why 42 Is a Good Minimum Sample Size"
@@ -74,7 +74,7 @@
     "\n",
     "... it's a T distribution with 1 degree of freedom.\n",
     "\n",
-    "Basically, the tails of a cauchy distribution are \"too thick\" to keep samples drawn from it constrained to a nice, neat normal distribution. The assumption of finite variance, and thus the central limit theorem, don't apply.\n"
+    "Basically, the tails of a cauchy distribution are \"too thick\" to keep samples drawn from it constrained to a nice, neat normal distribution. The assumption of finite variance, and thus the central limit theorem, doesn't apply.\n"
    ]
   },
   {
